MPD_sima v0.18.1.dev0


 -- kaliko <kaliko@azylum.org>  Thu, 18 Nov 2021 13:55:12 +0100

MPD_sima v0.18.0

 * New database, no migration done from old database !
   A backup is done in "${XDG_DATA_HOME}/mpd_sima/"
   Play history and blocklist are forgotten then.
 * Blocklist is now handled with mpd-sima command arguments,
   simadb_cli executable is removed.
 * Removed obsolete --create-db and --generate-config options
 * Fixed crash when setting XDG_CONFIG_HOME (closes #50)
 * Add abstract unix socket support for MPD connection
 * Better MPD connection management.
 * Need at least python-musicpd 0.7.0.
   Abstract socket in v0.6.0 and socket timeout in v0.7.0

 -- kaliko <kaliko@azylum.org>  Tue, 16 Nov 2021 16:02:37 +0100

MPD_sima v0.17.0

 * New offline autoqueue plugin based on file genre tags only
 * Add randomness in Tags plugin artist selection
 * Fixed issue with un-tagged titles (closes #40)
 * Fixed "artist with quotes not found" (closes #41)
 * Fixed bad pid in Uniq core plugin (closes #32)
 * Move "test-tags-config" as positional argument "config-test"
 * Move "--create-db" as positional argument "create-db"
 * Add mpd-sima commands as positional arguments:
 config-test, create-db, generate-config, purge-history
 * Use duration instead of time in Track object (closes #37)
 * Use musicbrainz_albumid|trackid tags in Tracks object

 -- kaliko <kaliko@azylum.org>  Wed, 28 Apr 2021 17:21:39 +0200

MPD_sima v0.16.1

 * tags plugin: Add album queue mode
 * tags plugin: Ensure metadata used in filter are enabled
 so that MPD exposes them (closes #38)

 -- kaliko <kaliko@azylum.org>  Sat, 09 Jan 2021 12:28:17 +0100

MPD_sima v0.16.0

 * New offline autoqueue plugin based on file tags only
 * Expose a new executable "test-tags-config"
 * Update vinstall.py (closes #34)
 * Fixed bug when http client fetches a corrupted cached entry (closes #35)
 * Need at least python 3.6

 -- kaliko <kaliko@azylum.org>  Tue, 15 Dec 2020 16:17:05 +0100

MPD_sima v0.16.0.dev0
